--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,15 @@
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
 h1 {
     color: red;
+}
+
+html, body {
+    background-color:lightblue;
 }
 
 #play-again {
@@ -8,4 +18,39 @@ h1 {
 
 #game {
     display: none;
+}
+
+#container #choices-container {
+    display: flex;
+    gap: 30px;
+
+}
+
+.uc {
+    width: 300px;
+    height: 300px;
+    border: none;
+    border-radius: 150px;
+    cursor: pointer;
+}
+
+#rock-btn {
+    background: url('./images/rps-rock.png');
+    background-color: white;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+#paper-btn {
+    background: url('./images/rps-paper.png');
+    background-color: white;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+#scissors-btn {
+    background: url('./images/rps-scissors.png');
+    background-color: white;
+    background-position: center;
+    background-repeat: no-repeat;
 }
